added forced chapters updates

--- a/ao3_web_reader/static/main.css
+++ b/ao3_web_reader/static/main.css
@@ -286,6 +286,11 @@ body {
     width: 100%;
 }
 
+.chapter-update-button {
+    color: #fff !important;
+    width: 100%;
+}
+
 .chapter-work-name-wrapper {
     margin-bottom: 10px;
 }
