--- a/ao3_web_reader/blueprints/works/templates/works.html
+++ b/ao3_web_reader/blueprints/works/templates/works.html
@@ -61,27 +61,27 @@
                         </a>
                         {% if not work.all_chapters_completed() %}
                             <button type="button" class="btn" onclick="showChaptersCompletionModal('chaptersCompletionModal',
-                               'Do you want to mark all chapters of {{ work.name }} as completed ?',
+                               'Do you want to mark all chapters of work as completed ?',
                                '{{ url_for('works.mark_chapters_as_completed', work_id=work.work_id, page_id=works_pagination.page) }}',);">
                                     <img src="{{ url_for('static', filename='icons/done_all_icon.svg') }}" alt="toggle all chapters completion">
                             </button>
                         {% endif %}
                         {% if work.all_chapters_completed() %}
                             <button type="button" class="btn" onclick="showChaptersCompletionModal('chaptersCompletionModal',
-                               'Do you want to mark all chapters of {{ work.name }} as incomplete ?',
+                               'Do you want to mark all chapters of work as incomplete ?',
                                '{{ url_for('works.mark_chapters_as_incomplete', work_id=work.work_id, page_id=works_pagination.page) }}',);">
                                     <img src="{{ url_for('static', filename='icons/remove_done_icon.svg') }}" alt="remove all chapters completion">
                             </button>
                         {% endif %}
                         {% if not work.favorite %}
                             <button type="button" class="btn" onclick="showWorkFavoriteToggleModal('worksFavoriteToggleModal',
-                               'Do you want to add {{ work.name }} to favorites ?',
+                               'Do you want to add work to favorites ?',
                                '{{ url_for('works.toggle_work_favorite', work_id=work.work_id, page_id=works_pagination.page) }}',);">
                                     <img src="{{ url_for('static', filename='icons/favorite.svg') }}">
                             </button>
                         {% else %}
                              <button type="button" class="btn" onclick="showWorkFavoriteToggleModal('worksFavoriteToggleModal',
-                                  'Do you want to remove {{ work.name }} from favorites ?',
+                                  'Do you want to remove work from favorites ?',
                                   '{{ url_for('works.toggle_work_favorite', work_id=work.work_id, page_id=works_pagination.page) }}',);">
                                  <img src="{{ url_for('static', filename='icons/favorite_filled.svg') }}">
                              </button>
