--- a/ao3_web_reader/templates/base.html
+++ b/ao3_web_reader/templates/base.html
@@ -6,6 +6,8 @@
 
         <script src="{{ url_for('static', filename='main.js') }}"></script>
 
+        <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='icons/favicon.svg') }}" />
+
         <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
               onerror="fallbackToLocalFileLink(this, '{{ url_for('static', filename='libs/bootstrap.min.css') }}');"
