--- a/ao3_web_reader/templates/page_layout.html
+++ b/ao3_web_reader/templates/page_layout.html
@@ -3,6 +3,10 @@
 
 {% set menuItems = [
   {
+    'title': 'Files',
+    'url': url_for('files.all'),
+  },
+  {
     'title': 'Tags',
     'url': url_for('tags.all_tags'),
   },
