navbar sync progress styling tweaks

--- a/ao3_web_reader/static/main.css
+++ b/ao3_web_reader/static/main.css
@@ -276,6 +276,12 @@ body {
 
 }
 
+.sync-container {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
 .chapter-completion-wrapper {
     width: 100%;
     display: flex;
