--- a/ao3_web_reader/templates/components/navbar.html
+++ b/ao3_web_reader/templates/components/navbar.html
@@ -4,7 +4,7 @@
             <a class="navbar-brand navbar-logo" href="{{ url_for('main.home') }}">
                 AO3 Reader
             </a>
-            <div id="sync-container" class="d-none">
+            <div id="sync-container" class="d-none sync-container">
                 <img id="sync-icon" src="{{ url_for('static', filename='icons/cloud_sync_icon.svg') }}"
                  alt="sync in progress">
                 <span id="sync-progress" class="sync-progress"></span>
