extracted some modals to separated components

--- a/ao3_web_reader/blueprints/tags/templates/tags.html
+++ b/ao3_web_reader/blueprints/tags/templates/tags.html
@@ -48,27 +48,7 @@
         {% endif %}
     </div>
 
-    <!-- removeTagModal -->
-    <div class="modal fade" id="removeTagModal" tabindex="-1" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                        <h5 class="modal-title">Remove tag</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                </div>
-                <div class="modal-body">
-                    Do you want to remove: <span id="remove-modal-item-name"></span>
-                </div>
-                <div class="modal-footer">
-                    <form action="" id="remove-modal-form" method="POST">
-                        <button type="submit" class="btn btn-danger">
-                            Remove
-                        </button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
+    {% include "components/modals/remove_tag_modal.html" %}
 </div>
 
 {% endblock %}
