core component renamed from 'main' to 'core'

--- a/ao3_web_reader/blueprints/core/templates/index.html
+++ b/ao3_web_reader/blueprints/core/templates/index.html
@@ -19,14 +19,14 @@
             {% if messages_pagination.has_next or messages_pagination.has_prev %}
                 <div class="pagination-controls">
                     {% if messages_pagination.has_prev %}
-                        <a class="pagination-controls-item" href="{{ url_for('main.home',
+                        <a class="pagination-controls-item" href="{{ url_for('core.home',
                          page_id=messages_pagination.prev_num) }}">
                             Prev
                         </a>
                     {% endif %}
                     {% if messages_pagination.has_next %}
                         <a class="pagination-controls-item {{ 'left-p-controls-item' if not messages_pagination.has_prev else '' }}"
-                           href="{{ url_for('main.home',
+                           href="{{ url_for('core.home',
                                  page_id=messages_pagination.next_num) }}">
 
                             Next
