--- a/ao3_web_reader/templates/components/navbar.html
+++ b/ao3_web_reader/templates/components/navbar.html
@@ -1,7 +1,7 @@
 <div class="navbar main-navbar navbar-dark sticky-top navbar-expand-sm">
         <div class="container-fluid">
         <div class="navbar-title-wrapper">
-            <a class="navbar-brand navbar-logo" href="{{ url_for('main.home') }}">
+            <a class="navbar-brand navbar-logo" href="{{ url_for('core.home') }}">
                 AO3 Reader
             </a>
             <div id="sync-container" class="d-none sync-container">
