generic navbar for error page

--- a/ao3_web_reader/blueprints/errors/templates/error.html
+++ b/ao3_web_reader/blueprints/errors/templates/error.html
@@ -2,7 +2,8 @@
 {% block content %}
 
 <div class="main-container">
-    {{ error }}
+    {% include "components/navbar.html" %}
+    <div>{{ error }}</div>
 </div>
 
 {% endblock %}
