tweaked navbar app title

--- a/ao3_web_reader/templates/components/navbar.html
+++ b/ao3_web_reader/templates/components/navbar.html
@@ -2,7 +2,7 @@
         <div class="container-fluid">
         <div class="navbar-title-wrapper">
             <a class="navbar-brand navbar-logo" href="{{ url_for('core.home') }}">
-                AO3 Reader
+                AO3reader
             </a>
             <div id="sync-container" class="d-none sync-container">
                 <img id="sync-icon" src="{{ url_for('static', filename='icons/cloud_sync_icon.svg') }}"
