tweaked modals close button styling

--- a/ao3_web_reader/templates/components/modals/remove_work_modal.html
+++ b/ao3_web_reader/templates/components/modals/remove_work_modal.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                     <h5 class="modal-title">Remove work</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
             </div>
             <div class="modal-body">
                 Do you want to remove: <span id="remove-modal-item-name"></span>
