--- a/ao3_web_reader/templates/components/modals/works_favorite_toggle_modal.html
+++ b/ao3_web_reader/templates/components/modals/works_favorite_toggle_modal.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                     <h5 class="modal-title">Add/Remove work from favorites</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
             </div>
             <div class="modal-body">
                 <span id="work-favorite-modal-text"></span>
