--- a/ao3_web_reader/static/main.css
+++ b/ao3_web_reader/static/main.css
@@ -332,6 +332,13 @@ body {
     flex-direction: column;
     gap: 5px;
     width: 100%;
+    margin-top: 25px;
+}
+
+blockquote {
+    margin-inline-start: 1.5em;
+    padding: 0.75em;
+    border-inline-start: 2px solid #999;
 }
 
 @media (max-width: 576px) {
