--- a/ao3_web_reader/blueprints/works/templates/works.html
+++ b/ao3_web_reader/blueprints/works/templates/works.html
@@ -56,9 +56,9 @@
                         </div>
                     </div>
                    <div class="work-management-wrapper">
-<!--                        <a href="{{ url_for('works.download_work', work_id=work.work_id) }}">-->
-<!--                            <img src="{{ url_for('static', filename='icons/download_icon.svg') }}" alt="download work">-->
-<!--                        </a>-->
+                        <a href="{{ url_for('works.download_work', work_id=work.work_id) }}">
+                            <img src="{{ url_for('static', filename='icons/download_icon.svg') }}" alt="download work">
+                        </a>
                         <a href="{{ url_for('works.force_chapters_update', work_id=work.work_id) }}">
                             <img src="{{ url_for('static', filename='icons/refresh.svg') }}">
                         </a>
