ebooks html exporter optional prettify

--- a/ao3_web_reader/ebook_exporter/html/templates/core.html
+++ b/ao3_web_reader/ebook_exporter/html/templates/core.html
@@ -31,17 +31,14 @@
   <div class="meta">
     <dl class="tags">
       <dt>Stats:</dt>
-      <dd>
-        Added: {{work_added_date}}
-        Updated: {{work_last_update}}
-      </dd>
+      <dd>Added: {{work_added_date}}</dd>
+      <dd>Updated: {{work_last_update}}</dd>
     </dl>
     <h1>{{work_name}}</h1>
-      <p>Summary</p>
-      <blockquote class="userstuff"><p>{{work_description}}</p></blockquote>
+    <p>Summary</p>
+    <blockquote class="userstuff"><p>{{work_description}}</p></blockquote>
   </div>
 </div>
-
 
 <div id="chapters" class="userstuff">{{chapters}}</div>
 
