--- a/ao3_web_reader/templates/base.html
+++ b/ao3_web_reader/templates/base.html
@@ -10,7 +10,7 @@
         <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='icons/favicon.svg') }}" />
 
         <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
-        <link href="{{ url_for('static', filename='libs/bootstrap.min.css') }}"
+        <link href="{{ get_styles_lib('libs/bootstrap.min.css', 'https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css') }}"
               rel="stylesheet"
               integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
               crossorigin="anonymous">
@@ -34,7 +34,7 @@
         {% block content %}
         {% endblock %}
 
-        <script src="{{ url_for('static', filename='libs/bootstrap.bundle.min.js') }}"
+        <script src="{{ get_styles_lib('libs/bootstrap.bundle.min.js', 'https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js') }}"
                 integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
                 crossorigin="anonymous">
         </script>
