--- a/ao3_web_reader/templates/base.html
+++ b/ao3_web_reader/templates/base.html
@@ -1,42 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <script src="{{ url_for('static', filename='main.js') }}"></script>
-        <script src="{{ url_for('static', filename='js/modals.js') }}"></script>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='icons/favicon.svg') }}" />
+    <script src="{{ url_for('static', filename='main.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/modals.js') }}"></script>
 
-        <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
-        <link href="{{ get_styles_lib('libs/bootstrap.min.css', 'https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css') }}"
-              rel="stylesheet"
-              integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-              crossorigin="anonymous">
+    <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='icons/favicon.svg') }}" />
 
-        <title>AO3reader</title>
-    </head>
-    <body>
-        {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-            <div class="flashed-messages-container">
-              {% for category, message in messages %}
-                <div class="flashed-message-container flashed-message-container-{{ category }}">
-                    <span>
-                        {{ message }}
-                    </span>
-                </div>
-              {% endfor %}
-            </div>
-            {% endif %}
-        {% endwith %}
-        {% block content %}
-        {% endblock %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
+    <link
+        href="{{ get_styles_lib('libs/bootstrap.min.css', 'https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css') }}"
+        rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+        crossorigin="anonymous">
 
-        <script src="{{ get_styles_lib('libs/bootstrap.bundle.min.js', 'https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js') }}"
-                integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-                crossorigin="anonymous">
+    <title>AO3reader</title>
+</head>
+
+<body>
+    {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+    <div class="flashed-messages-container">
+        {% for category, message in messages %}
+        <div class="flashed-message-container flashed-message-container-{{ category }}">
+            <span>
+                {{ message }}
+            </span>
+        </div>
+        {% endfor %}
+    </div>
+    {% endif %}
+    {% endwith %}
+    {% block content %}
+    {% endblock %}
+
+    <script
+        src="{{ get_styles_lib('libs/bootstrap.bundle.min.js', 'https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js') }}"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
         </script>
-    </body>
+</body>
+
 </html>
