--- a/ao3_web_reader/static/main.css
+++ b/ao3_web_reader/static/main.css
@@ -342,6 +342,17 @@ blockquote {
     border-inline-start: 2px solid #999;
 }
 
+.export-work-object-content {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    padding: 16px;
+}
+
+.export-work-object-content a {
+    color: #fff;
+}
+
 @media (max-width: 576px) {
     .login-container {
         width: 95%;
