refactor: modals handling improvements

--- a/ao3_web_reader/static/main.css
+++ b/ao3_web_reader/static/main.css
@@ -151,6 +151,10 @@ body {
     color: #ffffff;
 }
 
+.work-management-wrapper img {
+    cursor: pointer;
+}
+
 .modal-content {
     background-color: #4E4E50 !important;
 }
